--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.13.2",
+    "antd": "^5.13.3",
+    "axios": "^1.6.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^11.0.3",
