--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "antd": "^5.13.3",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^11.0.3",
